# cli-music-player

./: .gitignore  LICENSE  MANIFEST.in  MusicPlayerCthulhu-Linux-Local.spec  README.md  build_exe.py  download_libmpv.py  install_shortcut.sh  musicplayer.py  pyproject.toml  run_gui.py  run_musicplayer.py  search_test.py  test_features_v2.py  test_queue_feature.py  test_ui_logic.py
.github/workflows/: build_release.yml  build_windows.yml  python-publish.yml
cli_music_player_cthulhu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hooks/: hook-certifi.py
musicplayer/: __init__.py  config.py  engine.py  gui.py  ipc.py  launcher.py  main.py  mpris_stub.py  mpv_setup.py  search.py  utils.py
