[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-music-player-cthulhu"
version = "0.4.7"
authors = [
  { name="Thiago Mendonça", email="tfariamendonca@gmail.com" },
]
description = "A lightweight terminal music player with a pulsing Cthulhu"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
    "mutagen>=1.45.0",
    "yt-dlp>=2023.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
musicplayer = "musicplayer.main:main"

[tool.setuptools]
packages = ["musicplayer"]
