[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-music-player-cthulhu"
version = "1.0.7"
authors = [
  { name="Thiago Mendonça", email="tfariamendonca@gmail.com" },
]
description = "A lightweight terminal music player with mpv engine and auto-setup"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2023.0.0",
    "windows-curses; sys_platform == 'win32'",
    "py7zr; sys_platform == 'win32'",
    "PyQt6>=6.4.0",
    "mpris2; sys_platform == 'linux'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
musicplayer = "musicplayer.main:main"
musicplayer-gui = "musicplayer.gui:main"

[tool.setuptools]
packages = ["musicplayer"]
include-package-data = true

[tool.setuptools.package-data]
musicplayer = ["assets/*.png"]
